2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a FileName property.
	* src/FileSystem.cs: Began implementing the stubs
	* src/Camera.cs: Implemented the FileSystem section

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Abilities.cs: Removed old CWL.

2007-09-16  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Stubbed out the Download methods to get a file from an MTP
	  device
	* src/FileSystem.cs: Stubbed out the Upload method to send a file to an MTP
	  device

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added some properties and methods which are common to all
	  files
	* src/Files/GenericFile.cs, src/Makefile.am, libgphoto2-sharp.mdp: Added
	  GenericFile class

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Removed old warning

2007-09-15  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Added two more properties

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Implemented initial support for parsing the correct filetype.
	  Added a list of all the possible fields that MTP can return. Important
	  ones which haven't been implemented will be implemented.
	* src/Files/MusicFile.cs, src/Files/ImageFile.cs: Partially implemented two
	  initial subclasses of File
	* src/Makefile.am: Added two new files to the makefile
	* src/Base/CameraFile.cs: Removed the wrapper for DetectMimetype. Made the
	  MimeType strings const rather than static.

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Freeing the unmanaged array after it has been
	  marshaled to managed code. This was a huge memory leak.

2007-09-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Implemented the new API for the Filesystem